--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Dinotopia</title>
-    <link rel="icon" type="image/png" href="images/T Rex Icon.png">
+    <link rel="icon" type="image/png" href="img/T Rex Icon.png">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta content="" name="keywords">
