--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h1 class="m-0 text-success"><i class="fa-light fa-t-rex"></i>Dinotopia</h1>
+            <h1 class="m-0 text-success"><i class="fa-solid fa-paw"></i>Dinotopia</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
