--- a/index.html
+++ b/index.html
@@ -139,19 +139,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="Test.html" class="nav-item nav-link">Test</a>
-                <a href="Ajax.html" class="nav-item nav-link">Ajax</a>
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
+                <a href="about.html" class="nav-item nav-link">Mesozoic</a>
+                <a href="service.html" class="nav-item nav-link">Dinosaurs</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="feature.html" class="dropdown-item">Feature</a>
-                        <a href="team.html" class="dropdown-item">Our Doctor</a>
-                        <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="feature.html" class="dropdown-item">Fossils</a>
+                        <a href="team.html" class="dropdown-item">Paleozoic</a>
+                        <a href="appointment.html" class="dropdown-item">Movies</a>
+                        <a href="testimonial.html" class="dropdown-item">Museums</a>
+                        <a href="404.html" class="dropdown-item">Notices</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
