--- a/index.html
+++ b/index.html
@@ -189,21 +189,21 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                 <div class="owl-carousel header-carousel">
                     <div class="owl-carousel-item position-relative">
-                        <img class="img-fluid" src="img/carousel-1.jpg" alt="">
+                        <img class="img-fluid" src="img/Mosasaurus.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Cardiology</h1>
+                            <h1 class="display-1 text-white mb-0">Mosasaurus</h1>
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
-                        <img class="img-fluid" src="img/carousel-2.jpg" alt="">
+                        <img class="img-fluid" src="img/Spinosaurus.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Neurology</h1>
+                            <h1 class="display-1 text-white mb-0">Spinosaurus</h1>
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
-                        <img class="img-fluid" src="img/carousel-3.jpg" alt="">
+                        <img class="img-fluid" src="img/Dimorphodon.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Pulmonary</h1>
+                            <h1 class="display-1 text-white mb-0">Dimorphodon</h1>
                         </div>
                     </div>
                 </div>
