--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Mesozoic</p>
-                    <h1 class="mb-4">The Mysterious Mesozoic: The Age of Reptiles!</h1>
+                    <h1 class="mb-4" font color="#077c0d">The Mysterious Mesozoic: The Age of Reptiles!</h1>
                     <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
                     <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
                     <p><i class="far fa-check-circle text-primary me-3"></i>Quality health care</p>
