--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4">Dinosaurs</p>
-                <h1>Most Popular Dinosaurs</h1>
+                <h1 style="color:green;">Most Popular Dinosaurs</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -252,7 +252,7 @@
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
                             <i class="fa fa-heartbeat text-success fs-4"></i>
                         </div>
-                        <h4 class="mb-3">Tyrannosaurus Rex</h4>
+                        <h4 class="mb-3" style="color:green;">Tyrannosaurus Rex</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
@@ -262,7 +262,7 @@
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
                             <i class="fa fa-x-ray text-success fs-4"></i>
                         </div>
-                        <h4 class="mb-3">Stegosaurus</h4>
+                        <h4 class="mb-3" style="color:green;">Stegosaurus</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
@@ -272,7 +272,7 @@
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
                             <i class="fa fa-brain text-success fs-4"></i>
                         </div>
-                        <h4 class="mb-3">Apatosaurus</h4>
+                        <h4 class="mb-3" style="color:green;">Apatosaurus</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
@@ -282,7 +282,7 @@
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
                             <i class="fa fa-wheelchair text-success fs-4"></i>
                         </div>
-                        <h4 class="mb-3">Triceratops</h4>
+                        <h4 class="mb-3" style="color:green;">Triceratops</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
@@ -292,7 +292,7 @@
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
                             <i class="fa fa-tooth text-success fs-4"></i>
                         </div>
-                        <h4 class="mb-3">Therizinosaurus</h4>
+                        <h4 class="mb-3" style="color:green;">Therizinosaurus</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
@@ -302,7 +302,7 @@
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
                             <i class="fa fa-vials text-success fs-4"></i>
                         </div>
-                        <h4 class="mb-3">Velociraptor</h4>
+                        <h4 class="mb-3" style="color:green;">Velociraptor</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
@@ -385,8 +385,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block border rounded-pill py-1 px-4">Paleozoic Era</p>
-                <h1>Paleozoic Era</h1>
+                <p class="d-inline-block border rounded-pill py-1 px-4" style="color:green;">Paleozoic Era</p>
+                <h1 style="color:green;">Paleozoic Era</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -463,7 +463,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4">Testimonial</p>
-                <h1>What Say Our Patients!</h1>
+                <h1 style="color:green;">What Say Our Patients!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
