--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                             <img class="img-fluid" src="img/Argentinosaurus.jpg" alt="">
                         </div>
                         <div class="team-text bg-success text-center p-4">
-                            <h5>Hallucigenia</h5>
+                            <h5 style="color:white;">Hallucigenia</h5>
                             <p class="text-warning">Department</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
@@ -410,8 +410,8 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Dimorphodon.jpg" alt="">
                         </div>
-                        <div class="team-text bg-light text-center p-4">
-                            <h5>Anomalocaris</h5>
+                        <div class="team-text bg-success text-center p-4">
+                            <h5 style="color:white;">Anomalocaris</h5>
                             <p class="text-success">Department</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
@@ -426,8 +426,8 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Mosasaurus.jpg" alt="">
                         </div>
-                        <div class="team-text bg-light text-center p-4">
-                            <h5>Trilobita</h5>
+                        <div class="team-text bg-success text-center p-4">
+                            <h5 style="color:white;">Trilobita</h5>
                             <p class="text-success">Department</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
@@ -442,8 +442,8 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Spinosaurus.jpg" alt="">
                         </div>
-                        <div class="team-text bg-light text-center p-4">
-                            <h5>Ammonoidea</h5>
+                        <div class="team-text bg-success text-center p-4">
+                            <h5 style="color:white;">Ammonoidea</h5>
                             <p class="text-success">Department</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
@@ -462,7 +462,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block border rounded-pill py-1 px-4">Testimonial</p>
+                <p class="d-inline-block border rounded-pill py-1 px-4" style="color:green;">Testimonial</p>
                 <h1 style="color:green;">What Say Our Patients!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
