--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark p-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
@@ -412,7 +412,7 @@
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Anomalocaris</h5>
-                            <p class="text-success">Department</p>
+                            <p class="text-warning">Department</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
@@ -428,7 +428,7 @@
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Trilobita</h5>
-                            <p class="text-success">Department</p>
+                            <p class="text-warning">Department</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
@@ -444,7 +444,7 @@
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Ammonoidea</h5>
-                            <p class="text-success">Department</p>
+                            <p class="text-warning">Department</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
