--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <p class="d-inline-block border rounded-pill py-1 px-4">Mesozoic</p>
+                    <p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Mesozoic</p>
                     <h1 class="mb-4" style="color: #077c0d">The Mysterious Mesozoic: The Age of Reptiles!</h1>
                     <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
                     <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
@@ -243,7 +243,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block border rounded-pill py-1 px-4">Dinosaurs</p>
+                <p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Dinosaurs</p>
                 <h1 style="color:green;">Most Popular Dinosaurs</h1>
             </div>
             <div class="row g-4">
