--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/Argentinosaurus.jpg" alt="">
+                            <img class="img-fluid" src="img/Hallucigenia.jpg" alt="">
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Hallucigenia</h5>
@@ -408,7 +408,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/Dimorphodon.jpg" alt="">
+                            <img class="img-fluid" src="img/Ammonoidea.jpg" alt="">
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Anomalocaris</h5>
@@ -424,7 +424,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/Mosasaurus.jpg" alt="">
+                            <img class="img-fluid" src="img/Trilobita.jpg" alt="">
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Trilobita</h5>
@@ -440,7 +440,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/Spinosaurus.jpg" alt="">
+                            <img class="img-fluid" src="img/Ammonoidea.jpg" alt="">
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Ammonoidea</h5>
@@ -462,7 +462,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block border rounded-pill py-1 px-4" style="color:green;">Testimonial</p>
+                <p class="d-inline-block border rounded-pill py-1 px-4" style="color:green;">Museums</p>
                 <h1 style="color:green;">What Say Our Patients!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
