--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative rounded overflow-hidden">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/Ammonoidea.jpg" alt="">
+                            <img class="img-fluid" src="img/Anomalocaris.jpg" alt="">
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Anomalocaris</h5>
