--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                             <i class="fa fa-heartbeat text-success fs-4"></i>
                         </div>
                         <h4 class="mb-3" style="color:green;">Tyrannosaurus Rex</h4>
-                        <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
+                        <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Tyrannosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
                             <i class="fa fa-x-ray text-success fs-4"></i>
                         </div>
                         <h4 class="mb-3" style="color:green;">Stegosaurus</h4>
-                        <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
+                        <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Stegosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
                 </div>
@@ -272,7 +272,7 @@
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px;">
                             <i class="fa fa-brain text-success fs-4"></i>
                         </div>
-                        <h4 class="mb-3" style="color:green;">Apatosaurus</h4>
+                        <h4 class="mb-3" style="color:green;">Spinosaurus</h4>
                         <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
@@ -283,7 +283,7 @@
                             <i class="fa fa-wheelchair text-success fs-4"></i>
                         </div>
                         <h4 class="mb-3" style="color:green;">Triceratops</h4>
-                        <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
+                        <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Triceratops.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
                             <i class="fa fa-tooth text-success fs-4"></i>
                         </div>
                         <h4 class="mb-3" style="color:green;">Therizinosaurus</h4>
-                        <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
+                        <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Therizinosaurus.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
                             <i class="fa fa-vials text-success fs-4"></i>
                         </div>
                         <h4 class="mb-3" style="color:green;">Velociraptor</h4>
-                        <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Spinosaurus.jpg" alt=""></p>
+                        <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.<img class="img-fluid" src="img/Velociraptor.jpg" alt=""></p>
                         <a class="btn" href=""><i class="fa fa-plus text-success me-3"></i>Read More</a>
                     </div>
                 </div>
@@ -463,7 +463,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4" style="color:green;">Museums</p>
-                <h1 style="color:green;">What Say Our Patients!</h1>
+                <h1 style="color:green;">Natural Science Museums Around the World</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
